syntax = "proto3";

option csharp_namespace = "GrpcServer.Protos";

package HelloWorld;

// The HelloWorld service definition.
service HelloWorld {
  // Sends a SayHello
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the HelloRequest.
message HelloRequest {
  string message = 1;
}

// The response message containing the HelloReply.
message HelloReply {
  string message = 1;
}